fixed alignment of text in buttons:fire:

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,20 +6,27 @@
         transform: rotate(360deg);
     }
 }
-
+.buttonContainer {
+    width: 25%;
+    margin: 0 15px;
+}
 .circle {
     border-radius: 50%;
+    text-align: center;
     background: $primaryWhite;
     color: $skateTeal;
-    height: 250px;
-    width: 250px;
+    width: 100%;
+    padding-bottom: 100%;
+    overflow: hidden;
     border: 3px dotted  $skateRed;
     -webkit-box-shadow:0px 0px 0px 5px $primaryWhite;
     -moz-box-shadow:0px 0px 0px 5px $primaryWhite;
     box-shadow:0px 0px 0px 5px $primaryWhite;
-    margin: 15px;
-    transition: ease all .6s;
-    &:hover {
+    position: relative;
+    transition: ease all 1s;
+    display: flex;
+    align-items: center;
+    &:hover, :focus {
         transition: ease all .6s;
         border: 3px dotted $primaryWhite;
         background: $skateRed;
@@ -29,9 +36,25 @@
         box-shadow:0px 0px 0px 5px $skateRed;
         animation: spin 2s linear infinite;
     }
+    a {
+        width: 100%;
+        font-family: $headerFont;
+        font-size: 3rem;
+        position: absolute;
+        left: 50%;
+        bottom: 50%;
+        transform: translate(-50%, 50%);
+        line-height: 2.8rem;
+        text-decoration: none;
+        color: $skateTeal;
+        transition: ease all 0.6s;
+        &:hover {
+            transition: ease all 1.2s;
+            color: $primaryWhite;
+        }
+    }
 }
 .flexParent {
     display: flex;
     justify-content: center;
-
 }
